Fix bugs on small screens

--- a/src/app.css
+++ b/src/app.css
@@ -46,7 +46,7 @@
   }
 
   body {
-      @apply bg-bg-400 text-white selection:bg-blue/20;
+    @apply bg-bg-400 text-white selection:bg-blue/20;
   }
 
   *:focus-visible {
@@ -96,10 +96,5 @@
 }
 
 @layer components {
-  .reveal {
-    @apply opacity-0 scale-90;
-  }
-  .reveal.active {
-    @apply opacity-100 duration-500 scale-100;
-  }
+
 }
